--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -486,10 +486,14 @@ input, select {
     cursor: pointer;
     overflow: hidden;
     height: 12vw;
-    -webkit-transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    -webkit-transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+  .hidarikikinoEren .lp-header.add-hide {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    opacity: 0; }
   .hidarikikinoEren .lp-headerTicker {
     background-image: url("../../../data/hidari-kikino-eren/images/header_ticker.png");
     background-repeat: repeat-x;
@@ -993,6 +997,18 @@ input, select {
       padding: 9.33333vw 4vw;
       opacity: 0;
       display: none; }
+      .hidarikikinoEren .lp-story_pages:after {
+        display: block;
+        font-size: 3.46667vw;
+        color: #fff;
+        text-align: center;
+        font-weight: 500;
+        -webkit-transform: scale(0.85);
+        transform: scale(0.85);
+        letter-spacing: .14em;
+        line-height: 1.3;
+        margin-top: -.3em;
+        white-space: pre; }
       .hidarikikinoEren .lp-story_pages li {
         max-width: 640px;
         position: relative;
@@ -1010,6 +1026,10 @@ input, select {
         width: 100%;
         height: 100%;
         display: block; }
+    .hidarikikinoEren .lp-story_pages.mod-prologue:after {
+      content: '※本作品は、2019年10月19日（土）に\A cakesにて掲載されたものになります。'; }
+    .hidarikikinoEren .lp-story_pages.mod-main:after {
+      content: '※本作品は、2019年10月20日(日）に\A朝日新聞 全国朝刊にて掲載されたものになります。'; }
     .hidarikikinoEren .lp-story_pages.add-active {
       display: block;
       -webkit-animation-name: show;
@@ -1069,14 +1089,42 @@ input, select {
         height: 100%;
         background-repeat: repeat-x;
         background-size: 327.45725vw 57.86667vw; }
+
+@-webkit-keyframes moveBgRight {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 327.45725vw; } }
+
+@keyframes moveBgRight {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 327.45725vw; } }
+
+@-webkit-keyframes moveBgLeft {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -327.45725vw; } }
+
+@keyframes moveBgLeft {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -327.45725vw; } }
     .hidarikikinoEren .lp-result .mod-top {
       background-color: #0e6cb2; }
       .hidarikikinoEren .lp-result .mod-top:before {
-        background-image: url("../../../data/hidari-kikino-eren/images/result_bg1.jpg"); }
+        background-image: url("../../../data/hidari-kikino-eren/images/result_bg1.jpg");
+        -webkit-animation: moveBgRight 30s linear infinite;
+        animation: moveBgRight 30s linear infinite; }
     .hidarikikinoEren .lp-result .mod-bottom {
       background-color: #deff00; }
       .hidarikikinoEren .lp-result .mod-bottom:before {
-        background-image: url("../../../data/hidari-kikino-eren/images/result_bg2.jpg"); }
+        background-image: url("../../../data/hidari-kikino-eren/images/result_bg2.jpg");
+        -webkit-animation: moveBgLeft 30s linear infinite;
+        animation: moveBgLeft 30s linear infinite; }
     .hidarikikinoEren .lp-result_inner {
       position: relative;
       z-index: 3;
