--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -123,7 +123,13 @@
     overflow: hidden;
     height: 12vw;
     transition: visibility .4s cubic-bezier(.19,1,.22,1),
+                opacity .4s cubic-bezier(.19,1,.22,1),
                 transform .4s cubic-bezier(.19,1,.22,1);
+  }
+
+  .lp-header.add-hide {
+    transform: translateY(-100%);
+    opacity: 0;
   }
   
   .lp-headerTicker {
@@ -718,6 +724,18 @@
       padding: 9.33333vw 4vw;
       opacity: 0;
       display: none;
+      &:after {
+        display: block;
+        font-size: 3.46667vw;
+        color: #fff;
+        text-align: center;
+        font-weight: 500;
+        transform: scale(.85);
+        letter-spacing: .14em;
+        line-height: 1.3;
+        margin-top: -.3em;
+        white-space: pre;
+      }
 
       li {
         max-width: 640px;
@@ -741,6 +759,14 @@
         height: 100%;
         display: block;
       }
+    }
+
+    &_pages.mod-prologue:after {
+      content: '※本作品は、2019年10月19日（土）に\A cakesにて掲載されたものになります。';
+    }
+
+    &_pages.mod-main:after {
+      content: '※本作品は、2019年10月20日(日）に\A朝日新聞 全国朝刊にて掲載されたものになります。';
     }
 
     &_pages.add-active {
@@ -812,10 +838,29 @@
       }
     }
 
+    @keyframes moveBgRight {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: 327.45725vw;
+      }
+    }
+
+    @keyframes moveBgLeft {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: -327.45725vw;
+      }
+    }
+
     .mod-top {
       background-color: #0e6cb2;
       &:before {
         background-image: url('../../../data/hidari-kikino-eren/images/result_bg1.jpg');
+        animation: moveBgRight 30s linear infinite;
       }
     }
 
@@ -823,6 +868,7 @@
       background-color: #deff00;
       &:before {
         background-image: url('../../../data/hidari-kikino-eren/images/result_bg2.jpg');
+        animation: moveBgLeft 30s linear infinite;
       }
     }
 
