--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -143,8 +143,9 @@
       0% {
         background-position: 0 0;
       }
+
       100% {
-        background-position: 268.88889px 0;
+        background-position: 49.64103vw 0;
       }
     }
   }
