--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -487,6 +487,12 @@
     }
   }
 
+  .lp-kv.add-fold {
+    .lp-kv_characters > li > div:after {
+      transform: scaleY(1);
+    }
+  }
+
 /* ------------------
 		lp-summery
 --------------------- */
