--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -490,6 +490,9 @@ input, select {
     transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-header {
+        height: 4.0625vw; } }
   .hidarikikinoEren .lp-header.add-hide {
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
@@ -500,20 +503,49 @@ input, select {
     background-size: 49.64103vw 12vw;
     width: 100%;
     height: 100%;
-    -webkit-animation: headerMoving 6s linear infinite;
-    animation: headerMoving 6s linear infinite; }
+    -webkit-animation: headerMovingS 6s linear infinite;
+    animation: headerMovingS 6s linear infinite; }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-headerTicker {
+        background-size: 16.80556vw 4.0625vw;
+        -webkit-animation: headerMovingL 6s linear infinite;
+        animation: headerMovingL 6s linear infinite; } }
 
-@-webkit-keyframes headerMoving {
+@-webkit-keyframes headerMovingS {
   0% {
     background-position: 0 0; }
   100% {
     background-position: 49.64103vw 0; } }
 
-@keyframes headerMoving {
+@keyframes headerMovingS {
   0% {
     background-position: 0 0; }
   100% {
     background-position: 49.64103vw 0; } }
+
+@-webkit-keyframes headerMovingL {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 16.80556vw 0; } }
+
+@keyframes headerMovingL {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 16.80556vw 0; } }
+
+@-webkit-keyframes headerMovingLL {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 268.88889px 0; } }
+
+@keyframes headerMovingLL {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 268.88889px 0; } }
   .hidarikikinoEren .lp-menuBtn {
     position: fixed;
     right: 0;
@@ -626,6 +658,14 @@ input, select {
     transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-menu {
+        position: relative;
+        width: auto;
+        opacity: 1;
+        visibility: visible;
+        overflow: visible;
+        z-index: 1; } }
     .hidarikikinoEren .lp-menu_wrap {
       position: absolute;
       width: 100%;
@@ -642,9 +682,23 @@ input, select {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-menu_wrap {
+          position: relative;
+          width: auto;
+          min-height: 0;
+          padding: 0; } }
     .hidarikikinoEren .lp-menu_nav {
       position: relative;
       width: 100%; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-menu_nav {
+          width: 6.48649vw;
+          background-color: #000;
+          padding: .41667vw;
+          position: absolute;
+          top: 5.41667vw;
+          right: 1.66667vw; } }
       .hidarikikinoEren .lp-menu_nav > ul {
         width: 100%; }
         .hidarikikinoEren .lp-menu_nav > ul > li {
@@ -658,11 +712,26 @@ input, select {
       width: 100%;
       height: 14.66667vw;
       margin-top: 4vw; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-menu_sns {
+          position: absolute;
+          right: 0;
+          top: 0;
+          height: 100%;
+          width: 10.41667vw;
+          padding-left: .41667vw;
+          padding-right: .41667vw;
+          z-index: 53; } }
       .hidarikikinoEren .lp-menu_sns > ul {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         height: 100%; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-menu_sns > ul {
+            background-color: #000;
+            width: 10.41667vw;
+            height: 100%; } }
         .hidarikikinoEren .lp-menu_sns > ul > li {
           width: 33.3%;
           border-right-width: 0; }
@@ -686,6 +755,9 @@ input, select {
     position: relative;
     width: 100%;
     padding-top: 12vw; }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren main {
+        padding-top: 4.0625vw; } }
   .hidarikikinoEren .lp-kv {
     position: relative;
     width: 100%;
