--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@media screen and (max-width: 799px) {
+  .mod-displayNone_mobile {
+    display: none !important; } }
+
 @media screen and (min-width: 800px) {
   .mod-displayNone_smallDesktop {
     display: none !important; } }
@@ -95,10 +99,12 @@ hr {
 input, select {
   vertical-align: middle; }
 
-.btn {
+.buttonSquare {
   position: relative;
   border: solid .26667vw #fff;
   background-color: #000;
+  width: 100%;
+  height: 26.4vw;
   -webkit-transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
   transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
   -webkit-transform: translateZ(0);
@@ -107,9 +113,14 @@ input, select {
   backface-visibility: hidden;
   overflow: hidden; }
   @media screen and (min-width: 800px) {
-    .btn {
-      border: solid .06944vw #fff; } }
-  .btn:before, .btn:after {
+    .buttonSquare {
+      border: solid .06944vw #fff;
+      border-width: .06944vw;
+      height: 7.77778vw; } }
+  @media screen and (min-width: 800px) and (max-width: 1100px) {
+    .buttonSquare {
+      height: 12.10811vw; } }
+  .buttonSquare:before, .buttonSquare:after {
     position: absolute;
     content: '';
     display: block;
@@ -126,35 +137,35 @@ input, select {
     backface-visibility: hidden;
     z-index: 0; }
     @media screen and (min-width: 800px) {
-      .btn:before, .btn:after {
+      .buttonSquare:before, .buttonSquare:after {
         width: 51%;
         height: 102%;
         -webkit-transform: scaleY(0);
         transform: scaleY(0); } }
-  .btn:before {
+  .buttonSquare:before {
     top: 0;
     left: 0;
     -webkit-transform-origin: center left;
     transform-origin: center left; }
     @media screen and (min-width: 800px) {
-      .btn:before {
+      .buttonSquare:before {
         -webkit-transform-origin: bottom center;
         transform-origin: bottom center; } }
-  .btn:after {
+  .buttonSquare:after {
     top: auto;
     bottom: 0;
     -webkit-transform-origin: center right;
     transform-origin: center right; }
     @media screen and (min-width: 800px) {
-      .btn:after {
+      .buttonSquare:after {
         right: 0;
         left: auto;
         -webkit-transform-origin: top center;
         transform-origin: top center; } }
-  .btn:hover:before, .btn:hover:after {
+  .buttonSquare:hover:before, .buttonSquare:hover:after {
     -webkit-transform: scaleX(1);
     transform: scaleX(1); }
-  .btn_inner {
+  .buttonSquare_inner {
     position: relative;
     width: 100%;
     height: 100%;
@@ -168,7 +179,7 @@ input, select {
     -ms-flex-align: center;
     align-items: center;
     z-index: 2; }
-    .btn_inner > span {
+    .buttonSquare_inner > span {
       position: relative;
       color: #fff;
       font-size: 5.06667vw;
@@ -180,7 +191,8 @@ input, select {
       transform: scaleX(0.85);
       z-index: 2; }
       @media screen and (min-width: 800px) {
-        .btn_inner > span {
+        .buttonSquare_inner > span {
+          font-size: .90278vw;
           -webkit-writing-mode: vertical-rl;
           -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
@@ -188,9 +200,9 @@ input, select {
           letter-spacing: .2em;
           text-indent: .2em; } }
       @media screen and (min-width: 800px) and (max-width: 1100px) {
-        .btn_inner > span {
+        .buttonSquare_inner > span {
           font-size: 1.40541vw; } }
-    .btn_inner > svg {
+    .buttonSquare_inner > svg {
       position: absolute;
       top: 0;
       right: auto;
@@ -203,36 +215,79 @@ input, select {
       display: block;
       z-index: 2; }
       @media screen and (min-width: 800px) {
-        .btn_inner > svg {
-          left: .69444vw;
-          width: 1.38889vw;
-          height: .79861vw; } }
-      .btn_inner > svg:hover {
+        .buttonSquare_inner > svg {
+          display: none; } }
+      .buttonSquare_inner > svg:hover {
         fill: #e50013;
         -webkit-transition-duration: .1s;
         transition-duration: .1s; }
-  .btn_inner:hover > span {
+  .buttonSquare_inner:hover > span {
     color: #e50013;
     -webkit-transition-duration: .1s;
     transition-duration: .1s; }
   @media screen and (min-width: 800px) {
-    .btn:hover:before, .btn:hover:after {
+    .buttonSquare:hover:before, .buttonSquare:hover:after {
       -webkit-transform: scaleY(1);
       transform: scaleY(1); } }
 
-.btn.mod-vote {
+.buttonSquare.mod-vote {
   background-color: #02d0d0; }
-  .btn.mod-vote span {
+  .buttonSquare.mod-vote span {
     color: #e50013; }
-  .btn.mod-vote:before, .btn.mod-vote:after {
+  .buttonSquare.mod-vote:before, .buttonSquare.mod-vote:after {
     background-color: #e50013; }
-  .btn.mod-vote .btn_inner:hover > span {
+  .buttonSquare.mod-vote .buttonSquare_inner:hover > span {
     color: #02d0d0; }
-  .btn.mod-vote .btn_inner:hover > svg {
+  .buttonSquare.mod-vote .buttonSquare_inner:hover > svg {
     fill: #02d0d0; }
 
-.btn.mod-sns .btn_inner:hover > svg {
-  fill: #e50013; }
+.buttonSquare.mod-sns {
+  height: 100%; }
+  .buttonSquare.mod-sns svg {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 6.93333vw;
+    height: 6.93333vw;
+    fill: #fff; }
+    @media screen and (min-width: 800px) {
+      .buttonSquare.mod-sns svg {
+        display: block;
+        width: 1.45833vw;
+        height: 1.45833vw; } }
+  .buttonSquare.mod-sns .buttonSquare_inner:hover > svg {
+    fill: #e50013; }
+  @media screen and (min-width: 800px) {
+    .buttonSquare.mod-sns:before, .buttonSquare.mod-sns:after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 101%;
+      height: 51%;
+      background-color: #02d0d0;
+      -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 0; }
+    .buttonSquare.mod-sns:before {
+      top: 0;
+      left: 0;
+      -webkit-transform-origin: center left;
+      transform-origin: center left; }
+    .buttonSquare.mod-sns:after {
+      top: auto;
+      bottom: 0;
+      -webkit-transform-origin: center right;
+      transform-origin: center right; }
+    .buttonSquare.mod-sns:hover:before, .buttonSquare.mod-sns:hover:after {
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1); } }
 
 /*
 以下のDOM構造で使用
@@ -336,6 +391,7 @@ input, select {
       height: 2.13333vw; }
 
 .hidarikikinoEren {
+  position: relative;
   /* ------------------
 		lp-loading 
 --------------------- */
@@ -649,8 +705,6 @@ input, select {
     height: 100%;
     width: 82.4vw;
     background-color: #000;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
     opacity: 0;
     visibility: hidden;
     z-index: -1;
@@ -658,14 +712,18 @@ input, select {
     transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), z-index 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    @media screen and (max-width: 799px) {
+      .hidarikikinoEren .lp-menu {
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%); } }
     @media screen and (min-width: 800px) {
       .hidarikikinoEren .lp-menu {
-        position: relative;
+        height: 4.0625vw;
         width: auto;
         opacity: 1;
         visibility: visible;
         overflow: visible;
-        z-index: 1; } }
+        z-index: 5; } }
     .hidarikikinoEren .lp-menu_wrap {
       position: absolute;
       width: 100%;
@@ -693,35 +751,38 @@ input, select {
       width: 100%; }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-menu_nav {
-          width: 6.48649vw;
+          width: 4.75694vw;
           background-color: #000;
           padding: .41667vw;
           position: absolute;
           top: 5.41667vw;
           right: 1.66667vw; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-menu_nav {
+          width: 6.48649vw; } }
       .hidarikikinoEren .lp-menu_nav > ul {
         width: 100%; }
-        .hidarikikinoEren .lp-menu_nav > ul > li {
-          width: 100%;
-          height: 26.4vw;
+        .hidarikikinoEren .lp-menu_nav > ul > .buttonSquare {
           border-top-width: 0; }
-        .hidarikikinoEren .lp-menu_nav > ul > li:first-child {
+        .hidarikikinoEren .lp-menu_nav > ul > .buttonSquare:first-child {
           border-width: .26667vw; }
+          @media screen and (min-width: 800px) {
+            .hidarikikinoEren .lp-menu_nav > ul > .buttonSquare:first-child {
+              border-width: .06944vw; } }
     .hidarikikinoEren .lp-menu_sns {
       position: relative;
       width: 100%;
-      height: 14.66667vw;
-      margin-top: 4vw; }
+      height: 14.66667vw; }
+      @media screen and (max-width: 799px) {
+        .hidarikikinoEren .lp-menu_sns {
+          margin-top: 4vw; } }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-menu_sns {
           position: absolute;
           right: 0;
           top: 0;
           height: 100%;
-          width: 10.41667vw;
-          padding-left: .41667vw;
-          padding-right: .41667vw;
-          z-index: 53; } }
+          width: auto; } }
       .hidarikikinoEren .lp-menu_sns > ul {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -729,22 +790,29 @@ input, select {
         height: 100%; }
         @media screen and (min-width: 800px) {
           .hidarikikinoEren .lp-menu_sns > ul {
+            position: absolute;
+            right: 0;
+            top: 0;
             background-color: #000;
             width: 10.41667vw;
-            height: 100%; } }
-        .hidarikikinoEren .lp-menu_sns > ul > li {
-          width: 33.3%;
+            height: 100%;
+            padding-left: .41667vw;
+            padding-right: .41667vw;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center; } }
+        .hidarikikinoEren .lp-menu_sns > ul > .buttonSquare.mod-sns {
+          width: 33%;
           border-right-width: 0; }
-        .hidarikikinoEren .lp-menu_sns > ul > li:last-child {
+          @media screen and (min-width: 800px) {
+            .hidarikikinoEren .lp-menu_sns > ul > .buttonSquare.mod-sns {
+              width: 3.19444vw;
+              height: 3.19444vw; } }
+        .hidarikikinoEren .lp-menu_sns > ul > .buttonSquare.mod-sns:last-child {
           border-width: .26667vw; }
-      .hidarikikinoEren .lp-menu_sns svg {
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 6.93333vw;
-        height: 6.93333vw;
-        fill: #fff; }
+          @media screen and (min-width: 800px) {
+            .hidarikikinoEren .lp-menu_sns > ul > .buttonSquare.mod-sns:last-child {
+              border-width: .06944vw; } }
   .hidarikikinoEren .lp-menu.add-open {
     -webkit-transform: translateX(0);
     transform: translateX(0);
@@ -764,6 +832,10 @@ input, select {
     max-width: 1600px;
     padding-top: 14.933vw;
     overflow: hidden; }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-kv {
+        height: 49.30556vw;
+        padding-top: 5.06944vw; } }
     .hidarikikinoEren .lp-kv_characters {
       position: relative;
       display: -webkit-box;
@@ -782,6 +854,10 @@ input, select {
       margin: auto;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-kv_characters {
+          width: 98.33333vw;
+          height: 40.69444vw; } }
     .hidarikikinoEren .lp-kv .lp-character {
       position: relative;
       height: 100%;
