--- a/dev/web/src/sass/hidari-kikino-eren/_breakpoint.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_breakpoint.scss
@@ -1,4 +1,5 @@
 $breakpoints: (
+  'mobile': 'screen and (max-width: 799px)',
   'smallDesktop': 'screen and (min-width: 800px)',
   'mediumDesktop': 'screen and (min-width: 800px) and (max-width: 1100px)',
   'wideDesktop':'screen and (min-width: 1600px)'
@@ -7,6 +8,12 @@ $breakpoints: (
 @mixin mediaQuery($breakpoint: smallDesktop) {
   @media #{map-get($breakpoints, $breakpoint)} {
     @content;
+  }
+}
+
+.mod-displayNone_mobile {
+  @include mediaQuery($breakpoint: mobile) {
+    display: none !important;
   }
 }
 
