--- a/dev/web/src/sass/hidari-kikino-eren/_button.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_button.scss
@@ -1,13 +1,20 @@
-.btn {
+.buttonSquare {
   position: relative;
   border: solid .26667vw #fff;
   background-color: #000;
+  width: 100%;
+  height: 26.4vw;
   transition: background-color .4s cubic-bezier(.19,1,.22,1);
   transform: translateZ(0); //ちらつき防止
   backface-visibility: hidden; //ちらつき防止
   overflow: hidden;
   @include mediaQuery {
     border: solid .06944vw #fff;
+    border-width: .06944vw;
+    height: 7.77778vw;
+  }
+  @include mediaQuery(mediumDesktop) {
+    height: 12.10811vw;
   }
 
   &:before, &:after {
@@ -70,6 +77,7 @@
       transform: scaleX(.85);
       z-index: 2;
       @include mediaQuery {
+        font-size: .90278vw;
         writing-mode: vertical-rl;
         text-align: center;
         letter-spacing: .2em;
@@ -93,9 +101,7 @@
       display: block;
       z-index: 2;
       @include mediaQuery {
-        left: .69444vw;
-        width: 1.38889vw;
-        height: .79861vw;
+        display: none;
       }
 
       &:hover {
@@ -121,7 +127,8 @@
   }
 }
 
-.btn.mod-vote {
+// button 「投票結果」
+.buttonSquare.mod-vote {
   background-color: #02d0d0;
   span {
     color: #e50013;
@@ -129,7 +136,7 @@
   &:before, &:after {
     background-color: #e50013;
   }
-  .btn_inner:hover {
+  .buttonSquare_inner:hover {
     > span {
       color: #02d0d0;
     }
@@ -139,12 +146,62 @@
   }
 }
 
-.btn.mod-sns {
-  .btn_inner:hover {
+// button SNS
+.buttonSquare.mod-sns {
+  height: 100%;
+
+  svg {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 6.93333vw;
+    height: 6.93333vw;
+    fill: #fff;
+    @include mediaQuery {
+      display: block;
+      width: 1.45833vw;
+      height: 1.45833vw;
+    }
+  }
+
+  .buttonSquare_inner:hover {
     > svg {
       fill:  #e50013;
     }
   }
+
+  @include mediaQuery {
+    &:before, &:after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 101%;
+      height: 51%;
+      background-color: #02d0d0;
+      transition: transform .4s cubic-bezier(.19,1,.22,1);
+      transform: scaleX(0);
+      backface-visibility: hidden;
+      z-index: 0;
+    }
+    &:before {
+      top: 0;
+      left: 0;
+      transform-origin: center left;
+    }
+    &:after {
+      top: auto;
+      bottom: 0;
+      transform-origin: center right;
+    }
+    &:hover {
+      &:before, &:after {
+        transform: scaleX(1);
+      }
+    }
+  }
+
+
 }
 
 /*
